# AgentTracer

./: .dockerignore  .env.example  .gitignore  .gitmodules  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  PHASE2_COMPLETION_SUMMARY.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_FINAL_STATUS.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_UI_COMPLETE.md  PROJECT_README.md  QUICK_START.md  README.md  UI_COMPLETE.md  claude.md  context.md  design_doc_template.md  docker-compose.yml  generate_phase3_test_data.py  monitor.py  package-lock.json  progress.md  pyproject.toml  pytest.ini  requirements.txt  run_phase3_demo.py  test_phase2_debug.py  test_phase3_complete.py
backend/: __init__.py  alerts.py  baselines.py  behavior_profiles.py  drift_engine.py  enums.py  ingest_api.py  models.py  query_api.py  query_phase3.py
data/: devset.json
db/: schema.sql  seed.sql  setup.sh
db/migrations/: 002_phase2_schema.sql  003_phase3_behavior.sql
docs/: README.md  api-sequences.md  architecture.md  component-responsibility.md  data-flow.md  deployment.md  failure-handling.md  phase2-observability.md  phase3-drift-detection.md  report.md  results.md
docs/internal/: README.md  ai_guidelines.md  claude.md  context.md  development_history.md  drift_detection_design.md  drift_detection_principles.md  progress.md  test_reference.md
docs/metrics/: hc_base_action_only.json  hc_ours_action_only.json
docs/reference/: system_design_full.md
examples/: agent_with_decisions_example.py  agent_with_failures.py  agent_with_phase2.py  customer_support_agent.py  drift_detection_example.py  phase3_usage_example.py
examples/localGPT/: package.json  restart-servers.sh  run_system.py
examples/localgpt-integration/: README.md
monitoring/: __init__.py  config.py  fusion.py  normalize.py  types.py
monitoring/eval/: __init__.py  bootstrap_ci.py  devset_ab.py  plot_safety_curve.py
monitoring/scorers/: __init__.py  action_contrast.py  heuristics.py  trajectory_agentic.py  trajectory_holistic.py
results/agm_os/: metrics.json
results/basemini_os/: metrics.json
results/compare/: metrics.json
results/g5_base/: metrics.json
results/g5_ours/: metrics.json
results/hc_base_trajectory_only/: metrics.json
results/hc_ours_trajectory_only/: metrics.json
results/ops_base/: metrics.json
results/ops_ens/: metrics.json
results/ops_fh/: metrics.json
results/ops_fh2/: metrics.json
results/ops_ours/: metrics.json
results/opt2_ours/: metrics.json
results/opt_base/: metrics.json
results/opt_ours/: metrics.json
results/ours_full/: metrics.json
results/ours_subset/: metrics.json
results/ours_v2/: metrics.json
results/ours_v3/: metrics.json
results/pool_base/: metrics.json
results/pool_base_mini/: metrics.json
results/pool_ours/: metrics.json
results/pool_ours_mini/: metrics.json
results/strict_base/: metrics.json
results/strict_ours/: metrics.json
results/sup_os/: metrics.json
sdk/: __init__.py  agenttrace.py
server/: __init__.py  alerts.py  baselines.py  behavior_profiles.py  database.py  drift_engine.py  enums.py  ingest_api.py  models.py  query_api.py  query_drift.py
server/api/: ingest.py  query.py
server/config/: alert_config_example.yaml  drift_thresholds.yaml  settings.py
server/core/: alerts.py  baselines.py  behavior_profiles.py  drift_engine.py
server/db/: schema.sql  seed.sql  setup.sh
server/middleware/: setup.py
server/models/: database.py  enums.py
tests/: __init__.py  conftest.py  test_decision_quality_validation.py  test_integration.py  test_performance.py  test_phase2_validation.py  test_sdk.py
tests/integration/: __init__.py  test_api_contracts.py  (+4 more)
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  start.sh  tailwind.config.js
ui/src/: App.tsx  (+3 more)
(+79 files in other folders)
